# tsdiff

./: .gitignore  command.txt  content.txt  function description.txt  pyproject.toml
configs/fdr/: brief.csv  data_preprocessing_interactive_config.yaml  train_CAS_250L.yaml
custom_scripts/: interactive_fdr_setup.py
data/processed_fdr_interactive/CAS_origfreq/: data_processing_run_summary.json  metadata.json
modify v1/: dataset.py  train_model.py  tsdiff.py  utils.py
results/CAS_250L_run01/lightning_logs/version_10/: metrics.csv
results/CAS_250L_run01/lightning_logs/version_11/: metrics.csv
results/CAS_250L_run01/lightning_logs/version_12/: metrics.csv  training_run_summary.json
results/CAS_250L_run01/lightning_logs/version_7/: hparams.yaml  metrics.csv
results/CAS_250L_run01/lightning_logs/version_8/: metrics.csv
results/CAS_250L_run01/lightning_logs/version_9/: metrics.csv
src/: uncond_ts_diff.rar
src/fdr_project/: data_loader.py
src/uncond_ts_diff/: dataset.py  utils.py
src/uncond_ts_diff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/uncond_ts_diff/model/: callback.py
src/uncond_ts_diff/model/diffusion/: _base.py  tsdiff.py
src/uncond_ts_diff/sampler/: observation_guidance.py
temp_training_output/lightning_logs/version_0/: best_checkpoint.ckpt  metrics.csv
temp_training_output/lightning_logs/version_0/checkpoints/: last.ckpt  (+2 more)
temp_training_output/lightning_logs/version_1/: best_checkpoint.ckpt  metrics.csv
temp_training_output/lightning_logs/version_2/: best_checkpoint.ckpt  metrics.csv
(+4 files in other folders)
